# pyseq_template

./: .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yaml  02_question.yaml  03_feature_request.yaml  bug_report.yaml  config.yaml  feature_request.md  unclear-documentation.md
.github/workflows/: python-publish.yml
src/: fluidics.py
src/pyseq/: com.py
src/resources/: default.toml  machine_settings.yaml  test_roi.toml
tests/: test_import.py
