[project]
name = "pyseq-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attrs>=25.3.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "tomlkit>=0.13.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]
