[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyseq"
dynamic = ["version"]
authors = [
  { name="Your Name", email="your_name@email.com" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "attrs>=25.3.0",
    "pydantic>=2.11.7",
    "pyseq-core>=1.0.5a0",
    "pyyaml>=6.0.2",
    "tomlkit>=0.13.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools_scm]
version_file = "src/_version.py"
fallback_version = "0.0.0"  # for dependabot

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "DEBUG"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"

