[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project]
name = "pyseq"  # UPDATE to sequencer-alias
version = "v1.1.0-alpha" # Start at "v0.0.0-alpha"
authors = [
  { name="Kunal Pandit", email="kpandit8387@gmail.com" }, # UPDATE
]
description = "Open source control sofware for [sequencer make & model]" #UPDATE
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "attrs>=25.3.0",
    "pydantic>=2.11.7",
    "pyseq-core>=1.0.8a0",
    "pyyaml>=6.0.2",
    "tomlkit>=0.13.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]

[project.urls]
Homepage = "https://github.com/PySeqEcosystem"
Issues = "https://github.com/PySeqEcosystem/{sequencer-alias}" # UPDATE


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "DEBUG"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
addopts = '-m "not hardware"'
markers = """
    hardware: run test on physical sequencer hardware
    fluidic: tests involving fluidic components
    optical: tests involving optical components
    temperature: tests involving temperature controlling components
    control: tests involving only control routines, no hardware
    mock: tests using mock or emulated instruments
    diagnostic: quick test to check health of instrumentation
    """
